18-combining-argo-tools-part-2/argo-config/argo-rollouts/nginx-rollouts.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-rollouts
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20                   # first step is 20% of the traffic - 1 of 5 pods
      - pause: {}                       # manual promotion required
      - setWeight: 40                   # second step is 40% of the traffic - 2 of 5 pods
      - pause: {duration: 10s}          # auto promotion afer 10 seconds
      - setWeight: 60                   # third step is 60% of the traffic - 3 of 5 pods
      - pause: {duration: 20s}          # auto promotion afer 20 seconds
      - setWeight: 80                   # fourth step is 80% of the traffic - 4 of 5 pods
      - pause: {duration: 1m}           # auto promotion afer 1 minute
  selector:
    matchLabels:
      app: nginx-rollouts
  template:
    metadata:
      labels:
        app: nginx-rollouts
    spec:
      containers:
      - name: nginx-rollouts
        image: host.docker.internal:8085/argo-demo/nginx:5adc2278-cdd7-4dc6-9d54-f1ad3becc986
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: nginx-rollouts
