18-combining-argo-tools-part-2/argo-config/argo-rollouts/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: argo-demo                    # Note: argo-demo namespace, not argo-events
spec:
  ingressClassName: nginx
  rules:
  - host: argo.demo                       # Access via http://argo.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
